--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <html>
   <head>
-    <title>FHRITP</title>
+    <title>Sceptorial</title>
   </head>
   
   <body>
-    <a>Under development.</a>
+    <p>Profile:</p>
+    <a href="https://www.roblox.com/users/24325288/profile">STATUS: Site under development.</a>
   </body>
 </html>
